// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render if the flag is disabled 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`omits feature if the flag is missing 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`renders feature if the flag is enabled 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text>
    feature1
  </Text>
</View>
`;

exports[`renders the fallback instead, if the flag is disabled/omitted 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text>
    Old UI
  </Text>
</View>
`;
